# test

./: CHANGELOG.md  LICENSE  README.md  hermann-grid-test.py  pyproject.toml
pre-wiggle/: mcanany_levine.py  ninio.py  scintillating.py
src/grid_illusions/: __init__.py  bergen.py  bergen_grid.py  cli.py  demo.html  hermann.py  hermann_grid.py  mcanany_levine.py  ninio.py  scintillating.py  scintillating_grid.py
src/grid_illusions/illusions/: __init__.py  cli.py  hermann_grid.py
src/grid_illusions/images/: image_square.py
src/illusions/: __init__.py
src/images/: image_background.py
