[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "PyGrid"
version = "1.0.0"
authors = [
    {name = "Oliver A Collins", email = "oliver7collins@outlook.com"}
]
description = "A flexible Python package enabling users to draw several different grid illusions, tractable for use within psychology paradigms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/OliverACollins/PyGrid"
Issues = "https://github.com/OliverACollins/PyGrid/issues"

[project.scripts]
pygrid = "pygrid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_illusions"]